--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ "/assets/css/styles.css" | relative_url }}">
 
-  </head>
-  <body class='hvit'>
-    {% include navigation.html %}
-    {{ content }}
-  </body>
+  {% include navigation.html %}
+  <div class="stuff">
+    <div class="vinstri">
+        {% include panta.html %}
+    </div>
+      </head>
+      <body class='midja hvit'>
+        {{ content }}
+      </body>
+      <div>
+        {% include menu.html %}
+      </div>
+    </div>
+  </div>
 </html>
