--- a/_includes/panta.html
+++ b/_includes/panta.html
@@ -1,3 +1,5 @@
+<br>
+<br>
 <form>
     <fieldset class="account-info">
         <label>
@@ -13,8 +15,7 @@
         <input type="text" name="username">
         </label>
         <label>
-        kreditkort
-        <input type="password" name="password">
+        kreditkort<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder=" 0000000000000000" required><br>
         </label>
         <label>
             Fjöldi Miða
@@ -27,10 +28,13 @@
             </select>
         </label>
         <input type="checkbox" name="remember"> Vip
+        <br>
         <input type="checkbox" name="remember"> Deluxe
+        <br>
         <input type="checkbox" name="remember"> Venjulegt
     </fieldset>       
     <label>
+        <br>
         Athugasemd
         <br>
         <textarea name="comments"></textarea>
