--- a/_includes/panta.html
+++ b/_includes/panta.html
@@ -15,7 +15,7 @@
         <input type="text" name="username">
         </label>
         <label>
-        kreditkort<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder=" 0000000000000000" required><br>
+        kreditkort<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder="0000 0000 0000 0000" required><br>
         </label>
         <label>
             Fjöldi Miða
