--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <nav class="navigation mid">
-  <li><a href="/">Home</a> <!-- # = tengi á id --></a>
-  <li><a href="/about.html">About</a></li><!--
-  --><li><a href="/staff.html">Singers</a></li>
+  <li><a href="https://huginn-muninn.github.io/HuginnMuninn.github.io/">Home</a> <!-- # = tengi á id --></a>
+  <li><a href="https://huginn-muninn.github.io/HuginnMuninn.github.io/about">About</a></li><!--
+  --><li><a href="https://huginn-muninn.github.io/HuginnMuninn.github.io/staff">Singers</a></li>
 </nav>
 
