--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -12,9 +12,9 @@
     <div class="form-popup" id="myForm">
     <form action="/action_page.php" class="form-container">
         <h1>Menu</h1>
-        <button class="btn2"><a href="/staff.html" style="color:white">Staff</a></button>
+        <button class="btn2"><a href="https://huginn-muninn.github.io/HuginnMuninn.github.io/staff" style="color:white">Staff</a></button>
         <button class="btn"><a href="https://huginn-muninn.github.io/HuginnMuninn.github.io/about" style="color:white">About</a></button>
-        <button class="btn3"><a href="/" style="color:white">Home</a></button>
+        <button class="btn3"><a href="https://huginn-muninn.github.io/HuginnMuninn.github.io/" style="color:white">Home</a></button>
         <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
     </form>
     </div>
