--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -152,11 +152,11 @@ form {
   border-radius: 5px;
   font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
   overflow: hidden;
-  width: 240px;
+  width: auto;
 }
 fieldset {
   border: 0;
-  margin: 0;
+  margin: 100px;
   padding: 0;
 }
 input {
@@ -204,7 +204,7 @@ input {
 }
 
 
-
+/* menu */
 
 .open-button {
   background-color: goldenrod;
@@ -266,10 +266,10 @@ input {
   .form-container .btn3 {
   background-color: darkmagenta;
   color: white;
-  padding: 16px 20px;
+  padding: 50px;
   border: none;
   cursor: pointer;
-  width: 100%;
+  width: 50px;
   margin-bottom:10px;
   opacity: 0.8;
   border-radius: 12px;
