--- a/_includes/panta.html
+++ b/_includes/panta.html
@@ -3,11 +3,11 @@
 <form>
     <fieldset class="account-info">
         <label>
-            Nafn
+            Name
             <input type="text" name="name" placeholder="Full name" required>
         </label>
         <label>
-        Heimilisfang
+        Address
         <input type="text" name="username">
         </label>
         <label>
@@ -15,7 +15,7 @@
         <input type="text" name="username">
         </label>
         <label>
-        kreditkort<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder="0000 0000 0000 0000" required><br>
+        Credit card<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder="0000 0000 0000 0000" required><br>
         </label>
         <label>
             Fjöldi Miða
@@ -31,11 +31,11 @@
         <br>
         <input type="checkbox" name="remember"> Deluxe
         <br>
-        <input type="checkbox" name="remember"> Venjulegt
+        <input type="checkbox" name="remember"> Normal
     </fieldset>       
     <label>
         <br>
-        Athugasemd
+        Comment
         <br>
         <textarea name="comments"></textarea>
     </label>
