--- a/_includes/panta.html
+++ b/_includes/panta.html
@@ -18,7 +18,7 @@
         Credit card<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder="0000 0000 0000 0000" required><br>
         </label>
         <label>
-            Fjöldi Miða
+            Amount
             <select name="quantity" required>
                 <option value="1" selected>1</option>
                 <option value="2">2</option>
