--- a/_includes/panta.html
+++ b/_includes/panta.html
@@ -3,22 +3,22 @@
 <form>
     <fieldset class="account-info">
         <label>
-            Nafn
+            Name
             <input type="text" name="name" placeholder="Full name" required>
         </label>
         <label>
-        Heimilisfang
-        <input type="text" name="username">
+        Address
+        <input type="text" name="Address" placeholder="Address" >
         </label>
         <label>
         Email
-        <input type="text" name="username">
+        <input type="text" name="Email" placeholder="Email" >
         </label>
         <label>
-        kreditkort<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder="0000 0000 0000 0000" required><br>
+        Credit card<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder="0000 0000 0000 0000" required><br>
         </label>
         <label>
-            Fjöldi Miða
+            amount of tickets
             <select name="quantity" required>
                 <option value="1" selected>1</option>
                 <option value="2">2</option>
