--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -152,7 +152,7 @@ form {
   border-radius: 5px;
   font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
   overflow: hidden;
-  width: auto;
+  width: 240px;
 }
 fieldset {
   border: 0;
@@ -202,7 +202,6 @@ input {
   float: left;
   margin: 10px 0 0 20px;
 }
-
 
 /* menu */
 
