--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -153,6 +153,7 @@ form {
   font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
   overflow: hidden;
   width: auto;
+  max-width: 20px;
 }
 fieldset {
   border: 0;
