--- a/_includes/panta.html
+++ b/_includes/panta.html
@@ -7,18 +7,18 @@
             <input type="text" name="name" placeholder="Full name" required>
         </label>
         <label>
-        Address
-        <input type="text" name="Address" placeholder="Address" >
+        Adress
+        <input type="text" name="username">
         </label>
         <label>
         Email
-        <input type="text" name="Email" placeholder="Email" >
+        <input type="text" name="username">
         </label>
         <label>
-        Credit card<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder="0000 0000 0000 0000" required><br>
+        kreditkort<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder="0000 0000 0000 0000" required><br>
         </label>
         <label>
-            Amount
+            Tickets
             <select name="quantity" required>
                 <option value="1" selected>1</option>
                 <option value="2">2</option>
@@ -40,7 +40,6 @@
         <textarea name="comments"></textarea>
     </label>
     <fieldset class="account-action">
-        <input class="btn" type="submit" name="submit" value="Panta">
+        <input class="btn" type="submit" name="submit" value="order">
     </fieldset>
 </form>
-
