--- a/_includes/panta.html
+++ b/_includes/panta.html
@@ -8,11 +8,11 @@
         </label>
         <label>
         Adress
-        <input type="text" name="username">
+        <input type="text" name="username" placeholder="Full name" >
         </label>
         <label>
         Email
-        <input type="text" name="username">
+        <input type="text" name="username"placeholder="example@example.com" >
         </label>
         <label>
         kreditkort<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder="0000 0000 0000 0000" required><br>
