--- a/_includes/panta.html
+++ b/_includes/panta.html
@@ -7,12 +7,12 @@
             <input type="text" name="name" placeholder="Full name" required>
         </label>
         <label>
-        Adress
-        <input type="text" name="username" placeholder="Full name" >
+        Address
+        <input type="text" name="username" placeholder="Address" >
         </label>
         <label>
         Email
-        <input type="text" name="username"placeholder="example@example.com" >
+        <input type="text" name="username"placeholder="Example@example.com" >
         </label>
         <label>
         kreditkort<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder="0000 0000 0000 0000" required><br>
