--- a/_includes/panta.html
+++ b/_includes/panta.html
@@ -15,7 +15,8 @@
         <input type="text" name="username"placeholder="Example@example.com" >
         </label>
         <label>
-        kreditkort<input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder="0000 0000 0000 0000" required><br>
+        Credit card
+        <input type="text" id="kortanumer" pattern="[0-9]{16}" maxlength="16" minlength="16" placeholder="0000 0000 0000 0000" required><br>
         </label>
         <label>
             Tickets
@@ -33,7 +34,7 @@
         <br>
         <input type="checkbox" name="remember"> Normal
     </fieldset>       
-    <label>
+    <label class="">
         <br>
         Comment
         <br>
