--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -163,7 +163,7 @@ fieldset {
 input {
   border-radius: 5px;
   font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 10px;
 }
 .account-info {
   padding: 20px 20px 0 20px;
@@ -173,6 +173,7 @@ input {
   display: block;
   font-weight: bold;
   margin-bottom: 20px;
+  text-align: center;
 }
 .account-info input {
   background: #fff;
