--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   <body class='hvit'>
   {% include navigation.html %}
   <div class="stuff">
-    <div class="midja">
+    <div class="topi">
         {{ content }}
     </div>
     <div class="vinstri">
