--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,10 @@
   <body class='hvit'>
   {% include navigation.html %}
   <div class="stuff">
-    <div class="topi">
-        {{ content }}
+    <div class="midja">
+      <div class="boxarea">
+      {{ content }}
+      </div>
     </div>
     <div class="vinstri">
         {% include panta.html %}
