--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -20,6 +20,10 @@ body{
 .bakhvit{
   background-color: white;
 }
+.vin{
+  float: left;
+}
+
 /* view */
 .stuff {
   display: grid; /* grid erfist til barna (child element only) */
