layout_og_forsidu_breytingar

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,7 +3,7 @@
     color: green;
   }
 body{
-  background-color: darkgrey;
+  background-color: rgb(167, 67, 67);
 }
 .hvit{
   color: white;
@@ -50,6 +50,7 @@ body{
 
   .boxarea{
     display: block;
+    border: rgb(126, 228, 228);
   }
 
 @media screen and (min-width: 60em) { 
