--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -28,6 +28,7 @@ body{
 .stuff {
   display: grid; /* grid erfist til barna (child element only) */
   grid-gap: 0;
+  max-width: 905;
   grid-template-columns: 1fr;
   grid-template-areas: 
     "topi"
@@ -51,12 +52,19 @@ body{
   .boxarea{
     display: block;
     border: rgb(126, 228, 228);
+    width: auto;
+    height: auto;
+    max-height: 500;
+    max-width: 280;
+    padding: 20px;
+    margin: 10px;
   }
 
 @media screen and (min-width: 60em) { 
   .stuff {
     display: grid; /* grid erfist til barna (child element only) */
     grid-gap: 0;
+    max-width: 905;
     grid-template-columns: 1fr 2fr;
     grid-template-areas:
       "topi topi" 
