--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -203,7 +203,7 @@ input {
   margin: 10px;
 }
 .account-info {
-  padding: 20px 20px 0 20px;
+  padding: 0;
 }
 .account-info label {
   color: #395870;
