--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -55,8 +55,8 @@ body{
     height: auto;
     max-height: 500;
     max-width: 905;
-    padding: 20px;
-    margin: 10px;
+    padding-top: 100px;
+    margin-left: 50px;
   }
 
   .merki{
