--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -203,7 +203,8 @@ input {
   margin: 10px;
 }
 .account-info {
-  padding: 0;
+  padding-right: 50;
+  padding-left: 25;
 }
 .account-info label {
   color: #395870;
