--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -203,8 +203,9 @@ input {
   margin: 10px;
 }
 .account-info {
-  padding-right: 50;
-  padding-left: 25;
+  padding-right: 50px;
+  padding-left: 25px;
+  padding-top: 25px;
 }
 .account-info label {
   color: #395870;
@@ -214,9 +215,9 @@ input {
   text-align: center;
 }
 .account-info input {
-  background: #fff;
+  background: #7c7c80; 
   border: 1px solid #c6c7cc;
-   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .1);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .1);
   color: #636466;
   padding: 6px;
   margin-top: 6px;
@@ -224,7 +225,7 @@ input {
 }
 .account-action {
   background: #f0f0f2;
-  border-top: 1px solid #c6c7cc;
+  border-top: 2px solid #c6c7cc;
   padding: 20px;
 }
 .account-action .btn {
