--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -215,7 +215,7 @@ input {
   text-align: center;
 }
 .account-info input {
-  background: #7c7c80; 
+  background: #ffffff; 
   border: 1px solid #c6c7cc;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .1);
   color: #636466;
